<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">AppCursos</string>
    <string name="bienvenida">Bienvenido a AppCursos</string>
    <string name="email">Correo electronico</string>
    <string name="password">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="registrarse">Registrarse</string>
    <string name="usuario">Usuario</string>
    <string name="ConfirmPassword">Confirmar contraseña</string>
    <string name="añadir">Añadir</string>
    <string name="cancelar">Cancelar</string>
    <string name="descripcion">Descripcion</string>
    <string name="rol">Rol</string>
    <string name="lb_registrarse">Registrarse</string>
    <string name="lb_menu">Menu</string>
    <string name="lb_cursos">Cursos</string>
    <string name="lb_alumnos">Alumnos</string>
    <string name="lb_asignaturas">Asignaturas</string>
    <string name="lb_profesores">Profesores</string>
    <string name="lb_usuarios">Usuarios</string>
    <string name="llamar">Llamar</string>
    <string name="marcar">Marcar</string>
    <string name="sms">Mensajes</string>
    <string name="contactos">Contactos</string>
    <string name="camara">Camara</string>
    <string name="salir">Salir</string>
    <string name="nuevo">Nuevo</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="detalles">Detalles</string>
    <string name="lb_nuevo_curso">Nuevo Curso</string>
    <string name="lb_nuevo_asignatura">Nuevo Asignatura</string>
    <string name="lb_nuevo_alumno">Nuevo Alumno</string>
    <string name="lb_nuevo_profesor" tools:ignore="Typos">Nuevo Profesor</string>
    <string name="lb_nuevo_usuario">Nuevo Usuario</string>
    <string name="nombreCurso">Nombre Curso</string>
    <string name="centroCurso">Centro Curso</string>
    <string name="disponible">Disponible</string>
    <string name="noDisponible">No Disponible</string>
    <string name="ingles">Ingles</string>
    <string name="lengua">Lengua</string>
    <string name="matematicas">Matematicas</string>
    <string name="alta">Alta</string>
    <string name="buscar">Buscar</string>
    <string name="nombreAsignatura">Nombre Asignatura</string>
    <string name="descripcionAsignatura">Descripcion Asignatura</string>
    <string name="nombreAlumno">Nombre Alumno</string>
    <string name="apellidosAlumno">Apellidos Alumno</string>
    <string name="dniAlumno">Dni Alumno</string>
    <string name="telefonoAlumno">Telefono Alumno</string>
    <string name="nombreProfesor" tools:ignore="Typos">Nombre Profesor</string>
    <string name="apellidosProfesor" tools:ignore="Typos">Apellidos Profesor</string>
    <string name="telefonoProfesor" tools:ignore="Typos">Telefono Profesor</string>
    <string name="nombreUsuario">Nombre Usuario</string>
    <string name="emailUsuario">Correo Usuario</string>
    <string name="passwordUsuario">Contraseña Usuario</string>
    <string name="lb_esta_seguro">Estas seguro</string>
    <string name="lb_si">Si</string>
    <string name="lb_no">No</string>
    <string name="fisicaQuimica">Fisica y Quimica</string>
    <string name="tecnologia">Tecnologia</string>
    <string name="informatica">Informatica</string>
    <string name="musica">Musica</string>
    <string name="biologiaGeologia">Biologia y Geologia</string>
    <string name="historiaGeografia">Historia y Geografia</string>
    <string name="seleccionar_curso">Seleccionar un curso</string>
    <string name="seleccionar_asignatura">Seleccionar una asignatura</string>
    <string name="rol1">Administrador</string>
    <string name="rol2">Alumno</string>
    <string name="rol3" tools:ignore="Typos">Profesor</string>
    <string name="verCurso">Ver Cursos</string>
    <string name="editarCurso">Editar Curso</string>
    <string name="eliminarCurso">Eliminar Curso</string>
    <string name="buscarCurso">Buscar Curso</string>
    <string name="online">Enlinea</string>
    <string name="presencial">Presencial</string>
    <string name="semipresencial">Semipresencial</string>
    <string name="lb_roles">Roles</string>
    <string name="lb_permisos">Permisos</string>
    <string name="nombreRol">Nombre Rol</string>
    <string name="descripcionRol">Descripcion Rol</string>
    <string name="lb_nuevo_rol">Nuevo Rol</string>
    <string name="lb_nuevo_permiso">Nuevo Permiso</string>
    <string name="carga" tools:ignore="MissingTranslation">Cargando</string>
    <string name="video_presentacion">Video de Presentación</string>
    <string name="video_curso1">Curso Android</string>
    <string name="video_curso2">Curso Java</string>
    <string name="video_curso3" tools:ignore="MissingTranslation">Curso de JavaScript</string>
    <string name="video_curso4" tools:ignore="MissingTranslation">Curso de Python</string>
    <string name="titulo">Editar</string>
    <string name="lb_cancelar">Cancelar</string>
    <string name="mensajeAdmin">Bienvenido Admin</string>
    <string name="mensajeAlumno">Bienvenido Alumno</string>
    <string name="mensajeProfesor" tools:ignore="Typos">Bienvenido Profesor</string>
    <string name="mensajeUsuario">Bienvenido Usuario</string>
    <string name="lb_multimedia">Multimedia</string>
    <string name="lb_videos">Videos de Cursos</string>
    <string name="lb_audios">Audios de Cursos</string>
    <string name="reproducir">Reproducir</string>
    <string name="pausar">Pausar</string>
    <string name="detener">Detener</string>
    <string name="lb_cursoAndroid">Audio Curso Android</string>
    <string name="lb_cursoJava">Audio Curso de Java</string>
    <string name="titulo_editar">Editar</string>
    <string name="titulo_eliminar">Eliminar</string>
    <string name="msg_editar">Se va a editar</string>
    <string name="msg_eliminar">Se va a eliminar</string>
    <string name="lb_editarCurso">Editar Curso</string>
    <string name="lb_editarPermiso">Editar Permiso</string>
    <string name="lb_editarUsuario">Editar Usuario</string>
    <string name="lb_editarRol">Editar Rol</string>
    <string name="lb_editarProfesor" tools:ignore="Typos">Editar Profesor</string>
    <string name="lb_editarAlumno">Editar Alumno</string>
    <string name="lb_editarAsignatura">Editar Asignatura</string>
    <string name="lb_editarCursor">Editar Curso</string>
    <string name="msg_confirmEliminar">El curso se ha eliminado correctamente</string>
    <string name="title_confirmar">Confirmar</string>
    <string name="lb_mapa">Mapa</string>
    <string name="rutas">Rutas</string>
    <string name="latitudInicial">Ingrese la latitud A</string>
    <string name="longitudInicial">Ingrese la longitud A</string>
    <string name="latitudFinal">Ingrese la latitud B</string>
    <string name="longitudFinal">Ingrese la longitud B</string>
    <string name="obtener">Obtener</string>
    <string name="lb_nuevaRuta">Nueva Ruta</string>
    <string name="msg_confirmEliminarAsignatura">La asignatura se ha eliminado correctamente</string>
    <string name="msg_confirmEliminarAlumno">El alumno se ha eliminado correctamente</string>
    <string name="msg_confirmEliminarPermiso">El permiso se ha eliminado correctamente</string>
    <string name="msg_confirmEliminarProfesor" tools:ignore="Typos">El profesor se ha eliminado correctamente</string>
    <string name="msg_confirmEliminarRol">El rol se ha eliminado correctamente</string>
    <string name="msg_confirmEliminarUsuario">El usuario se ha eliminado correctamente</string>
    <string name="msg_confirmEditarCurso">El curso se ha editado</string>
    <string name="title_informacion">Mensaje</string>
    <string name="msg_informacion">El curso no se encuentra</string>
    <string name="title_activity_mapa2" tools:ignore="MissingTranslation">Mapa</string>
</resources>
