<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_llamar"
        android:icon="@drawable/ic_call_black_24dp"
        android:title="@string/llamar" />
    <item android:id="@+id/action_marcar"
        android:icon="@drawable/ic_dialpad_black_24dp"
        android:title="@string/marcar" />
    <item android:id="@+id/action_sms"
        android:icon="@drawable/ic_message_black_24dp"
        android:title="@string/sms" />
    <item android:id="@+id/action_contactos"
        android:icon="@drawable/ic_contacts_black_24dp"
        android:title="@string/contactos" />
    <item android:id="@+id/action_camara"
        android:icon="@drawable/ic_camera_black_24dp"
        android:title="@string/camara" />
    <item android:id="@+id/action_salir"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/salir" />

</menu>