<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bordes_redondeados"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".actividades.NuevoProfesorActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_nombreProfesor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:hint="@string/nombreProfesor"
                android:inputType="text"
                android:textColor="@color/colorSecundaryText"
                android:layout_margin="10dp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="-8dp" />

            <EditText
                android:id="@+id/et_apellidosProfesor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellidosProfesor"
                android:layout_margin="10dp"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/colorSecundaryText"
                app:layout_constraintTop_toBottomOf="@+id/et_nombreProfesor"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="-8dp" />

            <RadioGroup
                android:id="@+id/rg_departamentos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@+id/et_centroCurso"
                tools:ignore="MissingConstraints,UselessParent"
                tools:layout_editor_absoluteX="203dp">

                <RadioButton
                    android:id="@+id/rb_lengua"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:text="@string/lengua" />

                <RadioButton
                    android:id="@+id/rb_matematicas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:text="@string/matematicas" />

                <RadioButton
                    android:id="@+id/rb_ingles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:text="@string/ingles" />

                <RadioButton
                    android:id="@+id/rb_fisicaQuimica"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:text="@string/fisicaQuimica" />

                <RadioButton
                    android:id="@+id/rb_tecnologia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:text="@string/tecnologia" />

                <RadioButton
                    android:id="@+id/rb_informatica"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:text="@string/informatica" />

                <RadioButton
                    android:id="@+id/rb_musica"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:text="@string/musica" />

                <RadioButton
                    android:id="@+id/rb_biologiaGeologia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:text="@string/biologiaGeologia" />

                <RadioButton
                    android:id="@+id/rb_historiaGeografia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:text="@string/historiaGeografia" />
            </RadioGroup>

            <EditText
                android:id="@+id/et_telefonoProfesor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefonoProfesor"
                android:importantForAutofill="no"
                android:layout_margin="10dp"
                android:inputType="text"
                android:textColor="@color/colorSecundaryText"
                app:layout_constraintTop_toBottomOf="@+id/rg_departamentos"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="-8dp" />

            <Spinner
                android:id="@+id/s_asignaturas"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/seleccionar_asignatura"
                android:layout_margin="10dp"
                android:textColor="@color/colorPrimaryText"
                app:layout_constraintTop_toBottomOf="@+id/et_telefonoProfesor"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="1dp" />

            <Button
                android:id="@+id/altaProfesor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/boton_redondeados"
                android:textColor="@color/icons"
                android:text="@string/alta"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@+id/s_asignaturas"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="25dp" />

            <Button
                android:id="@+id/cancelarProfesor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/boton_redondeados"
                android:text="@string/cancelar"
                android:textColor="@color/icons"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@+id/altaProfesor"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="540dp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>