<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".actividades.NuevoCursoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_nombreCurso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:hint="@string/nombreCurso"
                android:layout_margin="10dp"
                android:inputType="text"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="-8dp" />

            <EditText
                android:id="@+id/et_centroCurso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/centroCurso"
                android:layout_margin="10dp"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@+id/et_nombreCurso"
                tools:ignore="MissingConstraints,UnusedAttribute"
                tools:layout_editor_absoluteX="-8dp"
                android:autofillHints="no"/>

            <RadioGroup
                android:id="@+id/rg_disponibilidad"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@+id/et_centroCurso"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="203dp">

                <RadioButton
                    android:id="@+id/rb_disponible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/disponible" />

                <RadioButton
                    android:id="@+id/rb_nodisponible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/noDisponible" />

            </RadioGroup>

            <Spinner
                android:id="@+id/s_numeroAlumnos"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@+id/rg_disponibilidad"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="1dp" />

            <CheckBox
                android:id="@+id/cb_modo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/online"
                android:layout_marginTop="20dp"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@+id/s_numeroAlumnos"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="26dp" />

            <CheckBox
                android:id="@+id/cb_modo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/presencial"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@+id/cb_modo1"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="26dp" />

            <CheckBox
                android:id="@+id/cb_modo3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/semipresencial"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@+id/cb_modo2"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="26dp" />

            <Button
                android:id="@+id/altaCurso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="@color/blanco"
                android:text="@string/alta"
                android:layout_marginTop="20dp"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@+id/cb_modo3"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="25dp" />

            <Button
                android:id="@+id/editarCurso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="@color/blanco"
                android:text="@string/editar"
                android:layout_marginTop="20dp"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@+id/altaCurso"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="25dp" />

            <Button
                android:id="@+id/eliminarCurso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="@color/blanco"
                android:text="@string/eliminar"
                android:layout_marginTop="20dp"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@+id/editarCurso"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="25dp" />

            <Button
                android:id="@+id/buscarCurso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="@color/blanco"
                android:text="@string/buscar"
                android:layout_marginTop="20dp"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@+id/eliminarCurso"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="25dp" />

            <Button
                android:id="@+id/cancelarCurso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/cancelar"
                android:textColor="@color/blanco"
                android:layout_marginTop="20dp"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@+id/altaCurso"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="540dp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>