<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.NuevoRolActivity">


    <EditText
        android:id="@+id/et_nombreRol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nombreRol"
        tools:ignore="LabelFor,MissingConstraints"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_descripcionRol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_margin="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/descripcionRol"
        app:layout_constraintTop_toBottomOf="@+id/et_nombreRol"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/altaRol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/blanco"
        android:text="@string/alta"
        android:layout_marginTop="20dp"
        android:layout_margin="25dp"
        app:layout_constraintTop_toBottomOf="@+id/et_descripcionRol"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp" />

    <Button
        android:id="@+id/cancelarRol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/cancelar"
        android:textColor="@color/blanco"
        android:layout_marginTop="20dp"
        android:layout_margin="25dp"
        app:layout_constraintTop_toBottomOf="@+id/altaRol"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="540dp" />

</androidx.constraintlayout.widget.ConstraintLayout>